OPIK-3014 improve tests